# rterm

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md  pure_grpc_upgrade.md  rterm.toml  tasks-coverage.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/rterm-agent/: Cargo.toml
crates/rterm-agent/src/: main.rs
crates/rterm-cli/: Cargo.toml
crates/rterm-cli/src/: main.rs
crates/rterm-core/: Cargo.toml
crates/rterm-core/src/: buffer.rs  cell.rs  color.rs  display_grid.rs  lib.rs  terminal.rs
crates/rterm-core/src/grid/: cell.rs  index.rs  mod.rs  row.rs  storage.rs
crates/rterm-core/tests/: alignment_test.rs  claude_code_test.rs  claude_render_test.rs  real_output.rs
crates/rterm-gui/: Cargo.toml
crates/rterm-gui/examples/: demo.rs
crates/rterm-gui/src/: colors.rs  egui_harness.rs  grid.rs  input.rs  lib.rs
crates/rterm-gui/tests/: egui_render_tests.rs
crates/rterm-mobile/src/: index.html
crates/rterm-mobile/src-tauri/: Cargo.toml  tauri.conf.json
crates/rterm-mobile/src-tauri/src/: commands.rs  hosts.rs  main.rs
crates/rterm-mobile/src/css/: style.css
crates/rterm-mobile/src/js/: app.js  canvas-grid.js  terminal.js
crates/rterm-proto/: Cargo.toml  build.rs
crates/rterm-proto/schema/: rterm.fbs
crates/rterm-proto/src/: lib.rs  wire.rs
crates/rterm-relay/: Cargo.toml  rterm.toml
crates/rterm-relay/src/: config.rs  https_server.rs  lib.rs  main.rs  managed_session.rs  mouse_encoding.rs  network.rs  pty.rs  screen_diff.rs  service.rs  session.rs  session_manager.rs  static_files.rs  tls.rs  ws_handler.rs  ws_server.rs  wt_handler.rs  wt_server.rs
crates/rterm-relay/tests/: automation.rs  e2e_test.rs  pty_session.rs  session_management.rs  zellij_compare.rs
crates/rterm-relay/tests/e2e/: Dockerfile  docker-compose.yml
crates/rterm-relay/tests/fixtures/: test_rterm.toml
crates/rterm-render/: Cargo.toml
crates/rterm-render/src/: cell.rs  colors.rs  grid.rs  lib.rs  paint.rs
crates/rterm-service/: Cargo.toml
crates/rterm-service/src/: lib.rs  session.rs
crates/rterm-session/: Cargo.toml
crates/rterm-session/src/: automation.rs  lib.rs  manager.rs  screen_diff.rs  session.rs  timeline.rs
crates/rterm-shell/: Cargo.toml
crates/rterm-shell/src/: lib.rs
crates/rterm-transport/: Cargo.toml
crates/rterm-transport/src/: error.rs  fake.rs  lib.rs  pty.rs  ssh.rs
crates/rterm-wasm/: Cargo.toml  index.html
crates/rterm-wasm/src/: app.rs  connection.rs  input.rs  lib.rs  messages.rs  protocol.rs  render.rs  scroll.rs  selection.rs  session.rs  transport.rs
docker/: .dockerignore  Dockerfile  docker-compose.yml  rterm.toml
docs/: MANIFEST.md  architecture.md  automation.md  cell-flags-migration.md  code-quality-findings.md  codelabs.md  design.md  grpc-flatbuffers-timeout.md  mobile-shell.md  postmortem-scroll-bug.md  readme.md  session-management-design.md  tasks.md
mobile/: FLATBUFFERS_BUGS.md  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/rterm/rterm_mobile/: MainActivity.kt
mobile/docs/: code-quality-findings.md
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: cell.dart  host_profile.dart  screen_buffer.dart
mobile/lib/rterm_rterm.protocol/rterm/: protocol_generated.dart
mobile/lib/screens/: host_edit_screen.dart  host_list_screen.dart  settings_screen.dart  terminal_screen.dart
mobile/lib/services/: agent_service.dart  grpc_client.dart  host_storage.dart  websocket_client.dart
mobile/lib/utils/: screen_converter.dart
mobile/lib/widgets/: terminal_grid.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: grpc_client_test.dart  integration_test.dart  widget_test.dart
mobile/web/: build.dart  index.html  manifest.json  pubspec.yaml
mobile/web/lib/: demo.dart  main.dart  models.dart  terminal_renderer.dart  websocket_client.dart
mobile/web/web/: demo.dart.js  demo.dart.js.deps  demo.dart.js.map  https_server.py  index.html  main.dart.1be7e8cea3fffd3c.js  main.dart.1be7e8cea3fffd3c.js.map  main.dart.1f2ab01aa7425d42.js  main.dart.1f2ab01aa7425d42.js.map  main.dart.223760d5aa4f8a5c.js  main.dart.223760d5aa4f8a5c.js.map  main.dart.34e5f0a3bcfd4738.js  main.dart.34e5f0a3bcfd4738.js.map  main.dart.3d37428ac52f504b.js  main.dart.3d37428ac52f504b.js.map  main.dart.3db4f6e1c5ccfb64.js  main.dart.3db4f6e1c5ccfb64.js.map  main.dart.42149ff7ca2c2cc4.js  main.dart.42149ff7ca2c2cc4.js.map  main.dart.421d52dcca354fda.js  main.dart.421d52dcca354fda.js.map  main.dart.42c81d43cae0c651.js  main.dart.42c81d43cae0c651.js.map  main.dart.430c18efcb24258b.js  main.dart.430c18efcb24258b.js.map  main.dart.50554ce0d86da9c3.js  main.dart.50554ce0d86da9c3.js.map  main.dart.5da2e87fe5ba5704.js  main.dart.5da2e87fe5ba5704.js.map  main.dart.5e3753c2e64f1008.js  main.dart.5e3753c2e64f1008.js.map  main.dart.66cec113eee6301c.js  main.dart.66cec113eee6301c.js.map  main.dart.6714f0caef2cdf97.js  main.dart.6714f0caef2cdf97.js.map  main.dart.74872a1dfcafb148.js  main.dart.74872a1dfcafb148.js.map  main.dart.857d35c00d96b216.js  main.dart.857d35c00d96b216.js.map  main.dart.85a704a80dd0d54a.js  (+33 more)
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
postmortems/: websocket-blank-screen-2026-04-04.md
test-wt-server/: Cargo.toml
test-wt-server/src/: main.rs
