[package]
name = "rterm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rterm-proto = { path = "../rterm-proto" }
grpc-client = { git = "https://github.com/shuozeli/pure-grpc-rs.git", branch = "main", features = ["tls"] }
grpc-core = { git = "https://github.com/shuozeli/pure-grpc-rs.git", branch = "main" }
grpc-codec-flatbuffers = { git = "https://github.com/shuozeli/pure-grpc-rs.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
