[package]
name = "rterm-service"
description = "gRPC service handlers for rterm: TerminalServer, unary + bidi streaming RPCs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rterm-core = { path = "../rterm-core" }
rterm-proto = { path = "../rterm-proto" }
rterm-transport = { path = "../rterm-transport" }
rterm-session = { path = "../rterm-session" }
grpc-core = { git = "https://github.com/shuozeli/pure-grpc-rs.git", branch = "main" }
grpc-server = { git = "https://github.com/shuozeli/pure-grpc-rs.git", branch = "main" }
grpc-codec-flatbuffers = { git = "https://github.com/shuozeli/pure-grpc-rs.git", branch = "main" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"
tower-service = "0.3"
http = "1"
tracing = "0.1"

[dev-dependencies]
rterm-transport = { path = "../rterm-transport", features = [] }
