[package]
name = "rterm-transport"
description = "Transport abstraction (PTY, SSH, etc.) with async trait interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "net"] }
portable-pty = "0.9"
tracing = "0.1"
russh = "0.59"
